# vista-waterfall

./: .gitignore
mcp-gateway/: AGENTS.md  README.md  pyproject.toml
mcp-gateway/src/mcp_gateway/: __init__.py  config.py  logging_config.py  server.py
mcp-gateway/tests/: test_gateway.py
mock-data/: README.md  pyproject.toml
mock-data/src/mock_data/: __init__.py  lookups.py  meridian.py  models.py
mock-data/tests/: test_lookups.py
valuation/: AGENTS.md  README.md  pyproject.toml
valuation/src/valuation_mcp/: __init__.py  logging_config.py  reasoning.py  server.py
valuation/src/valuation_mcp/schemas/: __init__.py  valuation.py
valuation/src/valuation_mcp/tools/: __init__.py  get_valuation.py
valuation/tests/: test_valuation_reasoning.py
waterfall-engine/: PLAN.md  README.md  pyproject.toml
waterfall-engine/src/waterfall_engine/: __init__.py
waterfall-engine/src/waterfall_engine/engine/: allocation.py  waterfall_engine.py
waterfall-engine/src/waterfall_engine/models/: fund.py  lp.py  state.py  tranche.py
waterfall-engine/src/waterfall_engine/rules/: catchup.py  preferred_return.py  residual.py  return_of_capital.py
waterfall-engine/src/waterfall_engine/validators/: validator.py
waterfall-engine/tests/: test_catchup.py  test_golden_example.py  test_lp_allocation.py  test_meridian_reconciliation.py  test_preferred_return.py  test_residual.py  test_return_of_capital.py
waterfall-scenario/: AGENTS.md  README.md  pyproject.toml
waterfall-scenario/src/waterfall_scenario_mcp/: __init__.py  logging_config.py  reasoning.py  server.py
waterfall-scenario/src/waterfall_scenario_mcp/schemas/: __init__.py  waterfall.py
waterfall-scenario/src/waterfall_scenario_mcp/tools/: __init__.py  get_waterfall_scenario.py
waterfall-scenario/tests/: test_waterfall_reasoning.py
