[project]
name = "mcp-gateway"
version = "0.1.0"
description = "Aggregating MCP gateway that mounts valuation-mcp and waterfall-scenario-mcp under one connector"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.9.0",
    "valuation-mcp",
    "waterfall-scenario-mcp",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
mcp-gateway = "mcp_gateway.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_gateway"]

[tool.hatch.build.targets.sdist]
include = ["src/mcp_gateway", "README.md", "AGENTS.md"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
