[project]
name = "valuation-mcp"
version = "0.1.0"
description = "MCP server for asset valuation from position closing prices"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.9.0",
    "pydantic>=2.0",
]

[project.scripts]
valuation-mcp = "valuation_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/valuation_mcp"]

[tool.hatch.build.targets.sdist]
include = ["src/valuation_mcp", "README.md", "AGENTS.md"]
