[project]
name = "waterfall-engine"
version = "0.1.0"
description = "Pure calculation engine for PE fund waterfall distributions (return of capital, preferred return, GP catch-up, residual split)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/waterfall_engine"]

[tool.hatch.build.targets.sdist]
include = ["src/waterfall_engine", "README.md"]
