[project]
name = "waterfall-scenario-mcp"
version = "0.1.0"
description = "MCP server for LP waterfall distribution scenarios from asset valuations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.9.0",
    "pydantic>=2.0",
    "waterfall-engine",
    "mock-data",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
waterfall-scenario-mcp = "waterfall_scenario_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/waterfall_scenario_mcp"]

[tool.hatch.build.targets.sdist]
include = ["src/waterfall_scenario_mcp", "README.md", "AGENTS.md"]
